--- a/app/views/user_mailer/tagged_message.text.erb
+++ b/app/views/user_mailer/tagged_message.text.erb
@@ -1,5 +1,5 @@
-<%= @user.name %>,
+Hello,
  
 You have successfully signed up to example.com,
-your username is: <%= @user.login %>.
+your username is: what up buddy.
  
