--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,38 @@
 
 <table>
   <thead>
+    Share Space
+    <tr>
+      <th>Facebook</th>
+      <th>Google</th>
+      <th>Twitter</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    <tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+      <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-type="button"></div>
+      </td>
+      <td>
+        <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+        <g:plusone size="medium" annotation="none">
+        </g:plusone>
+      </td>
+
+      <td>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-count="none" data-size="medium">Tweet</a>
+      </td>
+    </tr>
+  </tbody>
+
+<br></br>
+
+
+<table>
+  <thead>
     <tr>
       <th>Name</th>
       <th>Email</th>
